Fix timeline z-index

--- a/pages/bio-style.css
+++ b/pages/bio-style.css
@@ -224,7 +224,7 @@
   height: 100%;
   border-left: 2px dashed rgba(255, 255, 255, .3);
   padding-left: 0.2rem;
-  z-index: 1;
+  z-index: calc(3 + var(--max-competences));
 }
 
 .competence-conteneur {
